crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__assignment.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/assignment.cm
input_file: test_data/functions/assignment.cm
---
Fixture: functions/assignment.cm
============================================================
Source code:
//!ASSERT CONTAINS: store %0, 10
//!ASSERT CONTAINS: store %0, 20

// Tests a simple variable reassignment.
fn test() -> felt {
    let x = 10;
    x = 20;
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      %0 = 10
      store %0, 20
      return %0

  }

}
