crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__call_with_return.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/call_with_return.cm
input_file: test_data/functions/call_with_return.cm
---
Fixture: functions/call_with_return.cm
============================================================
Source code:
//!ASSERT CONTAINS: %0 = call 0()

// Tests a function call where the return value is assigned to a variable.
// This should generate a `Call` instruction.
fn helper() -> felt { return 123; }

fn main() -> felt {
    let x = helper();
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn helper {
    entry: 0

    0:
      return 123

  }

  // Function 1
  fn main {
    entry: 0

    0:
      %0 = call 0()
      return %0

  }

}
