crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__double_factorial.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/double_factorial.cm
input_file: test_data/functions/double_factorial.cm
---
Fixture: functions/double_factorial.cm
============================================================
Source code:
fn main() -> felt {
    let n = 9;
    let result = double_factorial(n);
    return result;
}

fn double_factorial(n: felt) -> felt {
    if (n == 0) {
        return 1;
    }
    if (n == 1) {
        return 1;
    }
    return n * double_factorial(n - 2);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 9
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn double_factorial {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      if %0 Eq 1 then jump 3 else jump 4

    3:
      return 1

    4:
      %3 = %0 Sub 2
      %4 = call 1(%3)
      %5 = %0 Mul %4
      return %5

  }

}
