crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__factorial.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/factorial.cm
input_file: test_data/functions/factorial.cm
---
Fixture: functions/factorial.cm
============================================================
Source code:
fn main() -> felt {
    let n = 10;
    let result = factorial(n);
    return result;
}

fn factorial(n: felt) -> felt {
    if (n == 0) {
        return 1;
    }
    return n * factorial(n - 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 10
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn factorial {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      %2 = %0 Sub 1
      %3 = call 1(%2)
      %4 = %0 Mul %3
      return %4

  }

}
