crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__fibonacci.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/fibonacci.cm
input_file: test_data/functions/fibonacci.cm
---
Fixture: functions/fibonacci.cm
============================================================
Source code:
fn fib(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    if (n == 1) {
        return 1;
    }
    return fib(n - 1) + fib(n - 2);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn fib {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 0

    2:
      if %0 Eq 1 then jump 3 else jump 4

    3:
      return 1

    4:
      %3 = %0 Sub 1
      %4 = call 0(%3)
      %5 = %0 Sub 2
      %6 = call 0(%5)
      %7 = %4 Add %6
      return %7

  }

}
