crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@functions__function_simple.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for functions/function_simple.cm
input_file: test_data/functions/function_simple.cm
---
Fixture: functions/function_simple.cm
============================================================
Source code:
//!ASSERT FUNCTION_COUNT: 1
//!ASSERT BLOCK_COUNT(test): 1
//!ASSERT CONTAINS: return 42

// A very simple function that returns a literal.
fn test() -> felt {
    return 42;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 42

  }

}
